src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  box-sizing: border-box;
}

/* Put any custom CSS styles here.  */
body {
  font-family:
    'Noto Sans',
    system-ui,
    -apple-system,
    BlinkMacSystemFont,
    'Segoe UI',
    Roboto,
    Oxygen,
    Ubuntu,
    Cantarell,
    'Open Sans',
    'Helvetica Neue',
    sans-serif;
  line-height: 1.5;
  font-weight: 400;

  margin: 0;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.truncate {
  width: 200px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.credits {
  color: #777;
  position: fixed;
  bottom: 24px;
  left: 24px;
  font-size: 11px;
  text-align: center;
}

.credits a {
  color: #000;
  font-weight: bold;
}

